Closed
Bug 361058
Opened 19 years ago
Closed 19 years ago
gcc2.95.3 fails to compile nsListBoxBodyFrame.cpp
Categories
(Core :: Layout, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: thesuckiestemail, Assigned: smaug)
References
Details
(Keywords: regression, verified1.8.0.9, verified1.8.1.1)
Attachments
(1 file)
1.56 KB,
patch
|
roc
:
review+
roc
:
superreview+
dveditz
:
approval1.8.0.9+
dveditz
:
approval1.8.1.1+
|
Details | Diff | Splinter Review |
Bug 258513 broke compilation for gcc2.95.3 under BeOS, but maybe others as well.
The lines:
return mTopFrame->IsBoxFrame() ? mTopFrame : nsnull;
needs to be changed to:
return mTopFrame->IsBoxFrame() ? (nsIBox*) mTopFrame : nsnull;
Or it will stop on ambigous candidates.
Comment 2•19 years ago
|
||
The same error also occurs with Sun's compiler:
http://tinderbox.mozilla.org/SeaMonkey-Ports/
It's a regression from bug 360642.
Blocks: 360642
Keywords: regression
Comment 3•19 years ago
|
||
Comment on attachment 245845 [details] [diff] [review]
Suggested patch
not doing reviews, sorry. please ask one of the module owners listed on http://www.mozilla.org/owners.html
Attachment #245845 -
Flags: review?(bryner)
Assignee | ||
Comment 4•19 years ago
|
||
hrm, buggy compilers...
Does the patch fix both beos and sun?
Assignee | ||
Comment 5•19 years ago
|
||
Comment on attachment 245845 [details] [diff] [review]
Suggested patch
I'll check this in if you roc can r+sr
Attachment #245845 -
Flags: superreview?(roc)
Attachment #245845 -
Flags: review?(roc)
Comment on attachment 245845 [details] [diff] [review]
Suggested patch
Use NS_STATIC_CAST
Attachment #245845 -
Flags: superreview?(roc)
Attachment #245845 -
Flags: superreview+
Attachment #245845 -
Flags: review?(roc)
Attachment #245845 -
Flags: review+
Assignee | ||
Comment 7•19 years ago
|
||
Checked in.
tgh, if you can now compile nsListBoxBodyFrame.cpp, please mark this
FIXED.
Comment 8•19 years ago
|
||
Needed on branches if bug 360642 is taken
Assignee: nobody → Olli.Pettay
Flags: blocking1.8.1.1+
Flags: blocking1.8.0.9+
Comment 9•19 years ago
|
||
Comment on attachment 245845 [details] [diff] [review]
Suggested patch
approved for 1.8/1.8.0 branches, a=dveditz
Attachment #245845 -
Flags: approval1.8.1.1+
Attachment #245845 -
Flags: approval1.8.0.9+
Reporter | ||
Comment 10•19 years ago
|
||
I can't verify this completly because bug 313309 dropped support for gcc2.9. I think this bug is fixed though.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Assignee | ||
Updated•19 years ago
|
Keywords: fixed1.8.0.9,
fixed1.8.1.1
Comment 11•19 years ago
|
||
v.fixed based on code inspection, reporter comments, and the fact that this has been fixed for a while without anyone screaming about it. :-) If anyone still has compilation issues, please let us know.
You need to log in
before you can comment on or make changes to this bug.
Description
•