bug 361058, gcc2.95.3 fails to compile nsListBoxBodyFrame.cpp, r+sr=roc